Closed Bug 1435788 Opened 6 years ago Closed 6 years ago

Assertion failure: mLastContentProcessedEvent <= mLastAPZProcessedEvent

Categories

(Core :: Panning and Zooming, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox60 --- wontfix
firefox61 --- fixed

People

(Reporter: Gankra, Assigned: kats)

Details

(Whiteboard: [gfx-noted])

Attachments

(3 files)

Attached file crash.txt
Steps to reproduce (that I have definitely checked):

* Launch a debug build of firefox 
* Open a second tab
* Snap that tab to a new window
* Visit another page in the new window/tab (e.g. twitter.com)

Instant 100% Reliable Crash

I am currently seeing this on a local build of 404db9dad9c2517de8cf708779bee2a091020fab (central as of a few hours ago) with some minor patches that shouldn't affect this subsystem. 

This happens with or without webrender.
Is this still happening?
Flags: needinfo?(a.beingessner)
(sorry for slow response)

Yep, still reproduces with this morning's central.
Flags: needinfo?(a.beingessner)
Most likely we just need to reset one of these keyboard event counters when a tab gets moved to another window. Somewhere in CompositorBridgeParent::RecvAdoptChild is probably the place to do that.
I agree. We do try and detect this situation and recover from it when we receive an update, [1] but maybe we should do that in other places.

Unfortunately I was only able to reproduce this once and lost the chance to see where this was happening, by trying it again and then it never reproduced again.

Could you give me a stack trace of where this is crashing? That might help.

[1] https://searchfox.org/mozilla-central/rev/74b7ffee403c7ffd05b8b476c411cbf11d134eb9/gfx/layers/apz/src/FocusState.cpp#129
Flags: needinfo?(a.beingessner)
Attached file stacktrace.txt
this is what spews on my terminal (I think the WR-related stuff is unrelated, but maybe not?)
Flags: needinfo?(a.beingessner)
There's some patches in bug 1441916 that /might/ fix this (low probability). I tried reproducing without those patches and couldn't, so I can't confirm if it fixes it or not.
Priority: -- → P3
Whiteboard: [gfx-noted]
I just hit this on a Windows local debug build after killing the GPU process via about:support, and then reloading about:support by pressing Ctrl+r on the new GPU process. (The keyboard input is probably important here). Seems to be reproducible, I'll see if I can debug it.
Actually this might be because I have my changes for bug 1441324 applied.
https://treeherder.mozilla.org/#/jobs?repo=try&revision=a4afbb0ebd35953d2bf8b7967c718618a4d21fb2 includes this patch. Pretty sure you can get the same problem when opening a new window, because it creates a new APZCTreeManager with a new FocusState with a APZ sequence number of 1, and that can get incremented by input events before the content sequence number arrives. So although I encountered the problem with a GPU process reset, the patch should fix Alexis' STR as well.
Assignee: nobody → bugmail
Comment on attachment 8958790 [details]
Bug 1435788 - Allow handling focus-changing events prior to the first update on GPU process restart.

https://reviewboard.mozilla.org/r/227704/#review233480
Attachment #8958790 - Flags: review?(rhunt) → review+
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/22f4a3eab719
Allow handling focus-changing events prior to the first update on GPU process restart. r=rhunt
https://hg.mozilla.org/mozilla-central/rev/22f4a3eab719
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Alexis, if you get a chance it would be good to check this fixes it for you.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: